[product.js] -> add new api: updateAmount
