# DBMS_project/backend/swagger_output.json
@@ -510,11 +510,40 @@
     "/product/updateAmount": {
       "post": {
         "tags": [
-          "Unfinished"
+          "Product"
         ],
         "description": "",
-        "parameters": [],
-        "responses": {}
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "userId": {
+                  "example": "any"
+                },
+                "productId": {
+                  "example": "any"
+                },
+                "amountChange": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "409": {
+            "description": "使用者或商品不存在"
+          }
+        }
       }
     }
   }
